# empire-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/empire/: __init__.py  exceptions.py
src/empire/api/: __init__.py  anthropic_client.py  usage_logger.py
src/empire/config/: __init__.py  env_check.py  supabase_creds.py
src/empire/email/: __init__.py  sender.py
src/empire/eval/: README.md  __init__.py  runner.py  store.py
src/empire/lint/: __init__.py  copy_guards.py  json_shape.py
src/empire/storage/: __init__.py  data_blobs.py  gcs_creds.py
src/empire/test/: __init__.py  guards.py
supabase/migrations/: 20260501_claude_golden_runs.sql
tests/: conftest.py  test_anthropic_client.py  test_copy_guards.py  test_email_sender.py  test_env_check.py  test_eval_runner.py  test_guards.py  test_json_shape.py  test_supabase_creds.py  test_ui_claims.py  test_usage_logger.py
