[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "empire-lib"
version = "0.1.0"
description = "Shared infrastructure for the empire — hard-block, not warn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rahul Jindal" },
]
keywords = ["supabase", "anthropic", "resend", "empire"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/zombielabsv2/empire-lib"
Repository = "https://github.com/zombielabsv2/empire-lib"
Issues = "https://github.com/zombielabsv2/empire-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/empire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
